src/styles/index.scss
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans&family=Roboto:wght@400;700&display=swap');

::selection {
    color: #000;
    background: #fff;
}

html {
    height: 100%;
    font-family: 'Josefin Sans', sans-serif;

}

body, #app {
    height: 100%;
    background: $main-color;
    color: $secondary-color;
}

.router-link-exact-active {
    border: 1px solid darken($highlight-color, 30);
}

